test/corpus/initial.txt
================================================================================
literal string
================================================================================

'hi'

--------------------------------------------------------------------------------

(source_file
  (expression
    (literal
      (literal_string))))

================================================================================
literal number
================================================================================

123

--------------------------------------------------------------------------------

(source_file
  (expression
    (literal
      (literal_number))))

================================================================================
literal data
================================================================================

{x:1,y:'hello'}

--------------------------------------------------------------------------------

(source_file
  (expression
    (literal
      (literal_data
        (function_definition
          (identifier)
          (argument
            (literal
              (literal_number))))
        (function_definition
          (identifier)
          (argument
            (literal
              (literal_string)
              )
          )
        )
      
      ))))

================================================================================
empty data
================================================================================

{}

--------------------------------------------------------------------------------

(source_file
  (expression
    (literal
      (literal_data))))

================================================================================
data with shorthand fill
================================================================================

a: 10

{ a }

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_definition
    (identifier)
    (argument
        (literal
          (literal_number)))
    )
  )
  (expression
    (literal
      (literal_data
      (identifier)
        )
    )
  )
)

================================================================================
empty list
================================================================================

[ ]

--------------------------------------------------------------------------------

(source_file
  (expression
    (literal
      (literal_list
    
))))


================================================================================
literal list
================================================================================

['hello','world']

--------------------------------------------------------------------------------

(source_file
  (expression
    (literal
      (literal_list
        (argument
            (literal
              (literal_string)))
        (argument
            (literal
              (literal_string)))
))))


================================================================================
identifier
================================================================================

sayHi

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
    (identifier))))


================================================================================
function
================================================================================

sayHi: 'hi'

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_definition
    (identifier)
    (argument
        (literal
          (literal_string))))))

================================================================================
multi-line function
================================================================================

sayHi:
    'hi'

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_definition
    (identifier)
    (indented_block
      (indent)
      (expression
        (literal
          (literal_string)))
          (newline)))))


================================================================================
nested
================================================================================

do:
  handle:
    personName: 'john'
    personName
  handle

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_definition
      (identifier)
      (indented_block
        (indent)
        (expression
          (function_definition
            (identifier)
              (indented_block
                (indent)
                (expression
                  (function_definition
                    (identifier)
                    (argument
                      (literal
                        (literal_string)))))
                (newline))))
                (expression
                  (function_call
                    (identifier)))
                  (newline))))
                  (expression
                    (function_call
                    (identifier))))

================================================================================
function call function
================================================================================

print a

--------------------------------------------------------------------------------

(source_file
  (expression
    (function_call
      (identifier)
      (argument
    (function_call
      (identifier))))))


